--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,11 @@
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
     "react": "^16.8.6",
+    "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
+    "react-through": "^1.1.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3"
   },
