--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
   "author": "Bryant Tran <bryant.t.tran1@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.2",
     "@casl/ability": "^3.1.2",
     "@casl/react": "^1.0.3",
+    "apollo-boost": "^0.4.4",
     "axios": "^0.18.1",
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.3",
     "morgan": "^1.9.1",
