--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "react-through": "^1.1.4",
+    "redux": "^4.0.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.3"
   },
