--- a/client/package.json
+++ b/client/package.json
@@ -1,42 +1,47 @@
 {
-  "name": "client",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "keywords": [],
-  "author": "Bryant Tran <bryant.t.tran1@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "@apollo/react-hooks": "^3.1.2",
-    "@casl/ability": "^3.1.2",
-    "@casl/react": "^1.0.3",
-    "apollo-boost": "^0.4.4",
-    "axios": "^0.18.1",
-    "body-parser": "^1.19.0",
-    "concurrently": "^4.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "mongodb": "^3.2.7",
-    "mongoose": "^5.6.3",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.19.1",
-    "react": "^16.8.6",
-    "react-breadcrumbs-dynamic": "^1.2.1",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "0.9.5",
-    "react-through": "^1.1.4",
-    "redux": "^4.0.4",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.3"
-  },
-  "proxy": "http://localhost:4000"
+    "name": "client",
+    "version": "1.0.0",
+    "description": "",
+    "private": true,
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    },
+    "keywords": [],
+    "author": "Bryant Tran <bryant.t.tran1@gmail.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@apollo/react-hooks": "^3.1.2",
+        "@casl/ability": "^3.1.2",
+        "@casl/react": "^1.0.3",
+        "apollo-boost": "^0.4.4",
+        "axios": "^0.18.1",
+        "body-parser": "^1.19.0",
+        "concurrently": "^4.1.1",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "graphql": "^14.5.8",
+        "graphql-tag": "^2.10.1",
+        "localStorage": "^1.0.4",
+        "lodash.throttle": "^4.1.1",
+        "mongodb": "^3.2.7",
+        "mongoose": "^5.6.3",
+        "morgan": "^1.9.1",
+        "nodemon": "^1.19.1",
+        "properties-reader": "^0.3.1",
+        "react": "^16.8.6",
+        "react-breadcrumbs-dynamic": "^1.2.1",
+        "react-dom": "^16.8.6",
+        "react-redux": "^7.1.3",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "0.9.5",
+        "react-through": "^1.1.4",
+        "redux": "^4.0.4",
+        "redux-persist": "^6.0.0",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^0.87.3"
+    },
+    "proxy": "http://localhost:4000/api"
 }
