--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "server",
-  "version": "1.0.0",
+  "name": "hr_app",
+  "version": "0.1.1",
+  "description": "Creating a REST API with Node.js and Oracle Database",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "license": "Apache-2.0",
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -11,8 +16,13 @@
     "concurrently": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.16.3",
+    "localStorage": "^1.0.4",
+    "lodash.throttle": "^4.1.1",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
-  }
+    "nodemon": "^1.18.4",
+    "properties-reader": "^0.3.1"
+  },
+  "devDependencies": {},
+  "author": ""
 }
